# cm2005-trade-visualization

./: .gitignore  CMakeLists.txt  CSVReader.cpp  CSVReader.h  Candlestick.cpp  Candlestick.h  Candlesticks.cpp  Candlesticks.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  README.md  code  main.cpp  report.html  report.md  wallet.cpp  wallet.h
